# Grat

./: Cargo.toml  README.md  mint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  scratch.rs
crates/core/src/archive/: mod.rs
crates/core/src/cache/: store.rs
crates/core/src/debugger/: stepping.rs  whatif.rs
crates/core/src/decode/: auth.rs  auth_address_nonce.rs  auth_signature.rs  chain_analyzer.rs  context.rs  contract_error.rs  contract_error_resolver.rs  cross_contract.rs  decode_context.rs  diagnostic.rs  host_error.rs  hosterror.rs  mod.rs  report.rs  scval_to_json.rs  walker.rs
crates/core/src/decode/mappings/: budget.rs  contract.rs  crypto.rs  crypto_tests.rs  events.rs  mod.rs  object.rs  severity_tests.rs  storage.rs  wasm.rs
crates/core/src/replay/: differ.rs  mod.rs  profiler.rs  sandbox.rs  state.rs  trace.rs
crates/core/src/rpc/: client.rs  jsonrpc.rs  metrics.rs  mod.rs
crates/core/src/spec/: decoder.rs  mod.rs  resolver.rs
crates/core/src/taxonomy/: loader.rs  schema.rs
crates/core/src/taxonomy/data/: budget.toml  context.toml  contract.toml  object.toml  storage.toml  value.toml  wasm.toml
crates/core/src/types/: address.rs  contract_id.rs  mod.rs  report.rs
crates/core/src/xdr/: codec.rs
docs/: contributing.mdx  docs.json  features.mdx  installation.mdx  introduction.mdx  license.mdx  mint.json  quickstart.mdx  roadmap.mdx  security.mdx
examples/: websocket-client.js
scratch/: check_xdr.rs
scripts/: build-taxonomy.js
(+122 files in other folders)
